@@ -2,6 +2,8 @@ Changes for Perl programming language extension Parse-CPAN-Meta
 
 {{$NEXT}}
 
+    - Add CPAN_META_JSON_BACKEND to allow requesting non-JSON.pm backends
+
 1.4417    2015-06-09 16:19:41-06:00 America/Denver
 
     - No changes from 1.4416
